--- a/gb/21/8/16/n13164967.md
+++ b/gb/21/8/16/n13164967.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nbrsvv347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nbrsvv347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nbrsvv347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nbrsvv347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nbrsvv347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>醒吾校友挺医护  送便当为抗疫英雄打气</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13164969-511806-600x400.jpg" />
 <h6>“初MAN”老板洪祥豪(左二)尽一己之力，准备了100个美味便当为辛苦医护人员加油打气。（醒吾科大提供）
 </h6>
 <hr>
 <p>【大纪元2021年08月16日讯】（大纪元记者徐乃义台湾桃园报导）“初MAN”餐厅老板洪祥豪，开业二周年就遭遇两次疫情打击，因三级警戒，全面禁止内用只能外送外带，餐厅业绩虽一路下滑，他有感第一线防疫医护的辛劳，仍倾全力准备了100个色香味俱全便当，亲送至台北荣总医院为医护人员加油打气。</p>
-<figure id="13164970" aria-describedby="caption-13164970" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13164970-511807-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/08/id13164970-511807-450x300.jpg" alt="不管是麻辣红汤或是黄汤还是面条，都是“初MAN”老板洪祥豪自己辛苦研发的美食。" width="500" /></a><figcaption id="caption-13164970" class="wp-caption-text">不管是麻辣红汤或是黄汤还是面条，都是“初MAN”老板洪祥豪自己辛苦研发的美食。<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E9%86%92%E5%90%BE.md#1">醒吾</a>科大提供）</figcaption></figure>
-<p>洪祥豪<ahref="https://github.com/nbrsvv347/djy/blob/master/gb/tag/%E9%86%92%E5%90%BE.md#1">醒吾</a>科技大学餐旅管理系毕业后，考量地缘关系选择在芦洲开业，餐厅取名“初MAN”系一开始先卖面食，取台语“吃面”谐音，方便消费者牢记餐厅特色。初MAN餐点使用天然食材且物美价廉，已成为新北市销魂面知名美食餐厅，麻辣香搭配古早味猪油拌饭更是老饕最爱。</p>
+<figure id="13164970" aria-describedby="caption-13164970" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13164970-511807-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/08/id13164970-511807-450x300.jpg" alt="不管是麻辣红汤或是黄汤还是面条，都是“初MAN”老板洪祥豪自己辛苦研发的美食。" width="500" /></a><figcaption id="caption-13164970" class="wp-caption-text">不管是麻辣红汤或是黄汤还是面条，都是“初MAN”老板洪祥豪自己辛苦研发的美食。<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%86%92%E5%90%BE.md#1">醒吾</a>科大提供）</figcaption></figure>
+<p>洪祥豪<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%86%92%E5%90%BE.md#1">醒吾</a>科技大学餐旅管理系毕业后，考量地缘关系选择在芦洲开业，餐厅取名“初MAN”系一开始先卖面食，取台语“吃面”谐音，方便消费者牢记餐厅特色。初MAN餐点使用天然食材且物美价廉，已成为新北市销魂面知名美食餐厅，麻辣香搭配古早味猪油拌饭更是老饕最爱。</p>
 <figure id="13164971" aria-describedby="caption-13164971" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13164971-511808-450x414.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/08/id13164971-511808-450x414.jpg" alt="洪祥豪(右)在学期间得到醒吾科技大学104校外实习菁英奖学金伍万元整。" width="500" /></a><figcaption id="caption-13164971" class="wp-caption-text">洪祥豪(右)在学期间得到醒吾科技大学104校外实习菁英奖学金伍万元整。（醒吾科大提供）</figcaption></figure>
 <p>洪祥豪学生时期就相当活跃，不只参加比赛与社团，同时参与公益活动。他永远记得观餐学院院长黄宝元谆谆教诲：“拿了多少社会资源，就要回馈多少资源给社会！”因此学生时连续多年参与华严启能中心亲子教育关怀活动，如今创业有成，疫情期间特别制作100个美味便当回馈社会，帮第一线防疫医护打气。</p>
 <p>大一新生时，洪祥豪参加“以厨会友”烹饪竞赛获得第三名，开启选手参赛历程，二年级开始出国比赛就夺得金牌优良成绩。在学期间因常出国参加比赛，他自嘲比赛出国的次数比出国旅游的次数还要多，创业后为了回馈母校，回醒吾科大开创第二间“初MAN”，激励学弟妹们勇于独当一面、创业圆梦。</p>
@@ -20,47 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/20/4/15/n12032518.md#1">做防疫医护人员后盾 醒吾尽“大学社会责任”</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/6/3/n12995586.md#1">醒吾国际生防疫总动员 歌声影音为台湾加油</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/7/12/n13082956.md#1">推广防疫花艺  醒吾校友居家手作苔球超疗愈</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/21/8/13/n13159452.md#1">醒吾表艺系化疫情为艺情  有艺无疫表演开播</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/3/n13618752.md#1">健行与迅得机械培育人才 推智慧机械产学合作</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/3/n13618628.md#1">艺票玩到底 山丰国小艺术才能美术班毕业美展</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/3/n13618621.md#1">展现桃园咖啡力 第一届桃园咖啡庄园节开展</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/3/n13618548.md#1">桃园9区19万大停电影响 郑文灿：台电要检讨</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/3/n13618176.md#1">牧师父爱伴读快乐学习 女大生忧郁症不药而愈</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/3/n13618183.md#1">应专业考量 桃园应修正高中职校长遴选简章</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/4/15/n12032518.md#1">做防疫医护人员后盾 醒吾尽“大学社会责任”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/6/3/n12995586.md#1">醒吾国际生防疫总动员 歌声影音为台湾加油</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/7/12/n13082956.md#1">推广防疫花艺  醒吾校友居家手作苔球超疗愈</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/8/13/n13159452.md#1">醒吾表艺系化疫情为艺情  有艺无疫表演开播</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741390.md#1">桃园7旬妇快筛阳吃NAC化痰药 1小时后猝死</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741246.md#1">华佗杯网路解疑技能竞赛 健行科大参加总决赛</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741285.md#1">2022 台湾亚太杯竞赛 醒吾科大18金居冠</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741290.md#1">科思创及中大 建立全球能量固化创新技术中心</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741367.md#1">金创奖复审 3团队8月试演会拼抢金奖</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741226.md#1">2022年绿色环境给付计划 6/1起补申报</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13617336.md#1">吴明德：拆解港府千亿财政赤字如何变盈余</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13617253.md#1">侦探的盲点</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/23/n13599774.md#1">【思想领袖】疫苗完美？您陷入“群体重塑”</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13611283.md#1">【更新2.28】俄军逼近基辅 车队长达40英里</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13611950.md#1">俄罗斯侵乌第5天 世界局势出现哪些变化？</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614671.md#1">泽连斯基欧议会演说 全场起立鼓掌 翻译都落泪</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/2/n13615002.md#1">小粉红对乌国女性发低俗言论 杜汶泽发文怒呛</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13608014.md#1">橙色食物对眼睛好 还有这些强大益处</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
-<li><a href="https://github.com/nbrsvv347/djy/blob/master/gb/22/3/1/n13612683.md#1">75岁老人白发变黑 中医师教你养发秘诀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nbrsvv347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nbrsvv347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/16/n13164967.htm">醒吾校友挺医护  送便当为抗疫英雄打气</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/16/n13164967.htm">醒吾校友挺医护  送便当为抗疫英雄打气</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nbrsvv347/djy/blob/master/gb/21/8/16/n13164967.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nbrsvv347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nbrsvv347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nbrsvv347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nbrsvv347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/8/16/n13164967.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
